add new features

--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://kennethraphaelkeil:1w4ou0ErVGwEEt4h@cluster0.mihvjdz.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=96a2dc1f6088bcbc786d
+GITHUB_SECRET=2bc48e1d3447b004b3ad2334bc03745f09c867ad
+
+GOOGLE_CLIENT_ID=1063651672224-ho85d3fumhcmf01krblcrctucfls7pmr.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
